Fixed body spacing.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,7 @@ body {
  width: 100%;
  margin: 0 auto;
  position: relative;
- top: -17px;
+ top: 34px;
 }
 
 main {
